[gd_scene load_steps=2 format=3 uid="uid://cysqdhuhwy7cb"]

[ext_resource type="Script" path="res://Scenes/Components/interaction_component.gd" id="1_70rks"]

[node name="InteractionComponent" type="Area2D"]
collision_layer = 0
collision_mask = 64
script = ExtResource("1_70rks")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
